# home_control

./: Cargo.toml  README.md
.zed/: tasks.json
crates/api/: Cargo.toml  README.md
crates/api-server/: Cargo.toml
crates/api-server/examples/: mock.rs
crates/api-server/src/: lib.rs
crates/api/src/: lib.rs
crates/app/: Cargo.toml
crates/app-iced/: Cargo.toml
crates/app-iced/src/: devices.rs  main.rs  splash.rs
crates/app-iced/src/components/: app_bar.rs  mod.rs  toast.rs
crates/app-iced/src/devices/: view.rs
crates/app-slint/: Cargo.toml  build.rs
crates/app-slint/src/: config.rs  controller.rs  main.rs
crates/app-slint/src/controller/: devices.rs
crates/app-slint/src/controller/devices/: fields.rs  list.rs  view.rs
crates/app-slint/src/ui/: helpers.slint  main.slint  navigation.slint  splash.slint
crates/app-slint/src/ui/devices/: list.slint  models.slint  view.slint
crates/app-slint/src/ui/devices/fields/: list.slint
crates/app/src/: config.rs  devices.rs  main.rs  splash.rs
crates/app/src/components/: toast.rs
crates/app/src/devices/: list.rs  view.rs
crates/arp/: Cargo.toml  README.md
crates/arp/examples/: get_ip.rs
crates/arp/src/: lib.rs
crates/control/: Cargo.toml  README.md
crates/control/src/: automation.rs  automations.rs  button.rs  device.rs  device_manager.rs  lib.rs  manager.rs  reflect.rs  set.rs  streams.rs  values.rs
crates/control/src/automations/: cancel.rs  parallel.rs  queued.rs  single.rs
crates/control/src/reflect/: value.rs
crates/influxdb/: Cargo.toml
crates/influxdb/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros-impl/: Cargo.toml  README.md
crates/macros-impl/src/: automation_set.rs  device.rs  device_set.rs  lib.rs  tagged.rs
crates/macros-impl/src/device/: input.rs  output.rs
crates/macros/src/: lib.rs
crates/metric/: Cargo.toml
crates/metric/src/: lib.rs  temperature.rs
crates/reflect/: Cargo.toml
crates/reflect/src/: lib.rs  value.rs
crates/testing/: Cargo.toml  rumqttd.test.toml
crates/testing/src/: lib.rs
crates/web/: Cargo.toml  README.md
crates/web/src/: lib.rs
crates/wiz/: Cargo.toml  README.md
crates/wiz/examples/: test.rs
crates/wiz/src/: lib.rs  light.rs
crates/zigbee/: Cargo.toml  README.md
crates/zigbee/src/: attribute.rs  lib.rs  publish.rs
crates/zigbee/src/devices/: aqara.rs  aurora.rs  philips.rs  sonoff.rs
examples/: button_presses.rs  device_set.rs  light_switch.rs
src/: automation.rs  lib.rs  threads.rs
tests/: http_server.rs  simple_automation.rs
