[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "warn"
async_fn_in_trait = "allow"

[workspace.lints.clippy]
#missing_errors_doc = "warn"

[workspace.dependencies]
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
thiserror = "2.0.17"
futures = "0.3.31"
light_ranged_integers = { git = "https://gitlab.com/MassiminoilTrace/light-ranged-integers.git", features = ["serde"] }
async-executor = "1.13.3"
async-timer = "1.0.0-beta.15"
control = { path = "crates/control" }
derive_more = { version = "2.0.1", features = ["full"] }
influxdb = "0.7.2"
macros = { path = "crates/macros" }
macros-impl = { path = "crates/macros-impl" }
metric = { path = "crates/metric" }
proc-macro2 = "1.0.101"
quote = "1.0.41"
simple-log = "2.4.0"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
tracing = "0.1.41"
wiz.path = "crates/wiz"
zigbee.path = "crates/zigbee"
arp.path = "crates/arp"
pnet = "0.35.0"
bon = "3.8.1"
tokio-util = "0.7.17"
async-scoped = "0.9.0"
async-task = "4.7.1"
convert_case = "0.9.0"
flume = "0.11.1"
log = "0.4.28"
pin-project = "1.1.10"
rumqttd = "0.20.0"
sync-cell = "0.2.0"
testing = { path = "crates/testing" }

[package]
name = "home_control"
version.workspace = true
edition.workspace = true

[features]
default = []
log = ["tracing/log"]

[dependencies]
control = { workspace = true }
zigbee = { workspace = true, optional = true }
wiz = { workspace = true, optional = true }
arp = { workspace = true, optional = true }
macros = { workspace = true }
futures = { workspace = true }
async-task = { workspace = true }
pin-project = { workspace = true }
tracing = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
async-scoped = { workspace = true, features = ["use-tokio"] }
light_ranged_integers = { workspace = true }

[dev-dependencies]
rumqttc = { workspace = true }
log = { workspace = true }
simple-log = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
testing = { workspace = true }

[[example]]
name = "button_presses"
required-features = ["zigbee"]

[[example]]
name = "light_switch"
required-features = ["zigbee"]

[[example]]
name = "device_set"
required-features = ["zigbee", "arp", "wiz"]

[[test]]
name = "simple_automation"
required-features = ["zigbee"]
