[workspace]
members = [
    "crates/*",
]
exclude = [
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "warn"
async_fn_in_trait = "allow"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.dependencies]
wiz.path = "crates/wiz"
zigbee.path = "crates/zigbee"
web.path = "crates/web"
arp.path = "crates/arp"
macros.path = "crates/macros"
macros-impl.path = "crates/macros-impl"
metric.path = "crates/metric"
control.path = "crates/control"
testing.path = "crates/testing"
api.path = "crates/api"
api-server.path = "crates/api-server"
reflect.path = "crates/reflect"

rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync", "macros", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
thiserror = "2.0.18"
futures = "0.3.32"
light_ranged_integers = { git = "https://gitlab.com/MassiminoilTrace/light-ranged-integers.git", features = ["serde"] }
async-timer = "1.0.0-beta.15"
derive_more = { version = "2.1.1", features = ["full"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
simple-log = "2.4.0"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
tracing = "0.1.44"
pnet = "0.35.0"
bon = "3.9.1"
tokio-util = "0.7.18"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
convert_case = "0.11.0"
log = "0.4.29"
pin-project = "1.1.11"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "tokio", "json"] }
trait-rpc = { git = "https://github.com/Riomhchlaraitheoir/trait-rpc.git" }
dirs = "6.0.0"
iced = "0.14"
iced_aw = "0.14"
iced_test = "0.14.0"
simple_logger = "5.2.0"
tower-http = "0.6.8"
#trait-rpc = { path = "../trait-rpc" }

[package]
name = "home_control"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
log = ["tracing/log"]
zigbee = ["dep:zigbee"]
wiz = ["dep:wiz"]
arp = ["dep:arp"]
web = ["dep:web"]
api = ["dep:api-server"]

[dependencies]
control = { workspace = true }
zigbee = { workspace = true, optional = true }
wiz = { workspace = true, optional = true }
arp = { workspace = true, optional = true }
macros = { workspace = true }
tracing = { workspace = true }
light_ranged_integers = { workspace = true }
web = { workspace = true, optional = true }
api-server = { workspace = true, optional = true }

[dev-dependencies]
rumqttc = { workspace = true }
log = { workspace = true }
simple-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
testing = { workspace = true }
derive_more.workspace = true
async-scoped = { workspace = true, features = ["use-tokio"] }

[[example]]
name = "button_presses"
required-features = ["zigbee"]

[[example]]
name = "light_switch"
required-features = ["zigbee"]

[[example]]
name = "device_set"
required-features = ["zigbee", "arp", "wiz"]

[[test]]
name = "simple_automation"
required-features = ["zigbee"]

[[test]]
name = "http_server"
required-features = ["web"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[lib]
test = false
doctest = false
