[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
control = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
api = { path = "../api", features = ["server"] }
tokio.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio-stream.workspace = true
tower-http = { version = "0.6.8", features = ["cors"] }
simple_logger = "5.1.0"
log = "0.4.29"
tracing = { version = "0.1.44", features = ["log"] }

[[example]]
name = "mock"
required-features = []