[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
control = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
api = { workspace = true, features = ["server"] }

[lints]
workspace = true

[dev-dependencies]
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["cors"] }
simple_logger = { workspace = true }
log = { workspace = true }
tracing = { workspace = true, features = ["log"] }
anyhow = { workspace = true }
tokio.workspace = true

[[example]]
name = "mock"
required-features = []

[lib]
test = false
doctest = false
