[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
trait-rpc = { workspace = true }
reflect.workspace = true
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true

[lints]
workspace = true

[features]
client = ["trait-rpc/websocket-client", "trait-rpc/json"]
server = ["trait-rpc/websocket-server", "trait-rpc/axum", "trait-rpc/json", "trait-rpc/cbor"]

[lib]
test = false
doctest = false
