[package]
name = "app-slint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.15.1"
api = { workspace = true, features = ["client"] }
log = "0.4.29"
simple_logger = "5.2.0"
smol = "2.0.2"
async-compat = "0.2.5"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
futures = "0.3.32"

[build-dependencies]
slint-build = "1.15.1"