[package]
name = "app"
version.workspace = true
edition.workspace = true

[features]
debug = ["iced/debug"]

[dependencies]
anyhow.workspace = true
api = { workspace = true, features = ["client"] }
dirs = { workspace = true }
iced ={ workspace = true, features = ["tokio", "advanced"] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
iced_aw = { workspace = true, features = ["spinner"] }
futures.workspace = true
simple_logger = { workspace = true }
derive_more = { workspace = true, features = ["from"] }

[dev-dependencies]
iced_test = { workspace = true }

[lints]
workspace = true
