[package]
name = "arp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pnet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
control.workspace = true
futures.workspace = true
bon = { workspace = true }

[dev-dependencies]
simple-log = { workspace = true }
