[package]
name = "control"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
light_ranged_integers = { workspace = true }
futures = { workspace = true }
async-timer = { workspace = true }
macros = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0.100"
tracing = { workspace = true }
pin-project = { workspace = true }
bon = "3.8.1"
tokio = { workspace = true}
tokio-util = { workspace = true}
async-scoped = { workspace = true}

[features]
custom = []
