[package]
name = "control"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
light_ranged_integers = { workspace = true }
futures = { workspace = true }
async-timer = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
pin-project = { workspace = true }
bon = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
async-scoped = { workspace = true}
reflect.workspace = true

[features]
custom = []

[lib]
test = false
