[package]
name = "testing"
version.workspace = true
edition.workspace = true

[dependencies]
rumqttd = { version = "0.20.0", artifact = ["bin"] }
rumqttc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "full"] }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
