[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["tokio", "json"] }
control.workspace = true
tokio.workspace = true
anyhow = { workspace = true }
bon.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false
