[package]
name = "wiz"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
light_ranged_integers = { workspace = true }
control.workspace = true
bon = "3.8.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
simple-log = { workspace = true }
