[package]
name = "wiz"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
light_ranged_integers = { workspace = true }
control.workspace = true
bon = { workspace = true }
sync-cell = { workspace = true }
anyhow = "1.0.100"
tracing = "0.1.41"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
simple-log = { workspace = true }
