[package]
name = "zigbee"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
control = { workspace = true }
metric = { workspace = true }
macros = { workspace = true }
light_ranged_integers = { workspace = true }
futures = { workspace = true }
bon = { workspace = true }
anyhow = "1.0.100"